# ReaderWriterPDF

./: CMakeLists.txt
Modules/: FindCairo.cmake
include/: PdfReader.h
src/: PdfReader.cpp  ReaderWriterPDF.cpp
