project(pdfreader)
cmake_minimum_required(VERSION 2.8)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT AND NOT "$ENV{OSG_DIR}" STREQUAL "")
        SET(CMAKE_INSTALL_PREFIX
            $ENV{OSG_DIR} CACHE PATH "${CMAKE_PROJECT_NAME} install prefix" FORCE
        )
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT AND NOT "$ENV{OSG_DIR}" STREQUAL "")

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Modules;${CMAKE_MODULE_PATH}")

SET(TARGET_DEFAULT "osgdb_pdf")

SET(TARGET_H 
    ${CMAKE_SOURCE_DIR}/include/PdfReader.h
)

SET(TARGET_SRC 
    ${CMAKE_SOURCE_DIR}/src/ReaderWriterPDF.cpp
    ${CMAKE_SOURCE_DIR}/src/PdfReader.cpp 
)

FIND_PACKAGE(OpenSceneGraph 3.0.1 REQUIRED osg osgDB osgUtil osgViewer)
FIND_PACKAGE(Cairo REQUIRED)
FIND_PACKAGE(Poppler-glib REQUIRED)

FIND_PATH(CAIRO_INCLUDE_DIRS cairo/cairo.h)
FIND_PATH(POPPLER_INCLUDE_DIRS poppler/glib/poppler.h)

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR}/include ${CAIRO_INCLUDE_DIRS} ${POPPLER_INCLUDE_DIRS} ${OPENSCENEGRAPH_INCLUDE_DIRS})

ADD_LIBRARY(${TARGET_DEFAULT} SHARED ${TARGET_SRC} ${TARGET_H})

set(LIBDIR "lib")
if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
    set(LIBDIR "lib64")
endif (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")

SET_TARGET_PROPERTIES(${TARGET_DEFAULT} PROPERTIES PREFIX "")
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/${LIBDIR})

TARGET_LINK_LIBRARIES(${TARGET_DEFAULT} ${OPENSCENEGRAPH_LIBRARIES}
${CAIRO_LIBRARIES} ${POPPLER_LIBRARIES})

#install the library
INSTALL (TARGETS ${TARGET_DEFAULT} DESTINATION
"${CMAKE_INSTALL_PREFIX}/${LIBDIR}/osgPlugins-${OPENSCENEGRAPH_VERSION}" )

#install the headers
INSTALL(FILES ${TARGET_H}
    DESTINATION ${CMAKE_INSTALL_PREFIX}/include
)
